// ==========================================
// 프리인보이스 (FreeInvoice) - 데이터 모델 (ERD)
// 프리랜서 견적/인보이스 발행 관리 서비스
// ==========================================

// ==========================================
// Enum (상수 및 상태값 정의)
// ==========================================
Enum RoleType {
  FREELANCER  [note: '견적서/인보이스를 발행하는 프리랜서']
  CLIENT      [note: '견적을 받고 승인하는 클라이언트']
}

Enum QuoteStatus {
  DRAFT       [note: '작성 중 (임시저장, 클라이언트에게 미노출)']
  SENT        [note: '발송 완료 - 클라이언트 확인/승인 대기']
  APPROVED    [note: '클라이언트 승인 완료']
  REJECTED    [note: '클라이언트 거절']
}

Enum InvoiceStatus {
  UNPAID      [note: '미결제 (기본값)']
  PAID        [note: '입금 확인 완료 (프리랜서가 수동 처리)']
  OVERDUE     [note: '지급 기한 초과 - 서버에서 due_date와 현재 시각 비교로 동적 계산']
}

// ==========================================
// Core Entities (핵심 개체)
// ==========================================

Table users {
  id integer [primary key, increment, note: 'PK: 사용자 고유 ID']
  email varchar [not null, unique, note: '로그인 계정 (이메일)']
  password varchar [not null, note: '암호화된 비밀번호 (BCrypt)']
  name varchar [not null, note: '사용자 이름 또는 담당자명']
  role RoleType [not null, note: '회원가입 시 선택하는 역할']
  company_name varchar [note: '프리랜서: 상호(선택) / 클라이언트: 소속 회사명']
  created_at timestamp [not null, default: `now()`]
}

// ==========================================
// 클라이언트 (프리랜서가 관리하는 거래처 목록)
// ==========================================
// [클라이언트 계정 매칭 방식]
// 프리랜서가 clients에 거래처(이메일 포함)를 먼저 등록해두면,
// 해당 이메일로 실제 CLIENT 계정이 가입할 때 client_user_id가 자동 연결된다.
// client_user_id가 NULL이면 아직 가입 전(초대 대기) 상태를 의미한다.

Table clients {
  id integer [primary key, increment, note: 'PK: 클라이언트(거래처) 고유 ID']
  freelancer_id integer [not null, note: 'FK: 이 거래처를 등록한 프리랜서']
  client_user_id integer [note: 'FK: 실제 클라이언트 계정 (가입 전에는 NULL)']
  company_name varchar [not null, note: '거래처 회사명']
  contact_name varchar [not null, note: '담당자명']
  email varchar [not null, note: '담당자 이메일 - CLIENT 회원가입 시 이 값으로 매칭']
  phone varchar [note: '연락처']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (freelancer_id, email) [unique, note: '한 프리랜서가 같은 이메일의 거래처를 중복 등록 방지']
  }
}

// ==========================================
// 견적서 및 견적 항목
// ==========================================

Table quotes {
  id integer [primary key, increment, note: 'PK: 견적서 고유 ID']
  freelancer_id integer [not null, note: 'FK: 작성한 프리랜서']
  client_id integer [not null, note: 'FK: 대상 클라이언트(거래처)']
  title varchar [not null, note: '견적서 제목 (예: 홈페이지 리뉴얼 견적)']
  memo text [note: '비고/조건 등 추가 설명']
  status QuoteStatus [not null, default: 'DRAFT', note: '견적서 진행 상태']
  valid_until date [note: '견적 유효 기한']
  total_amount decimal(12,2) [not null, default: 0, note: 'quote_items 합계 - 항목 저장 시 서버에서 자동 계산하여 저장']
  sent_at timestamp [note: '발송 시각 (DRAFT → SENT)']
  decided_at timestamp [note: '승인/거절 처리 시각']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [note: '최종 수정 시각']
}

Table quote_items {
  id integer [primary key, increment, note: 'PK: 견적 항목 고유 ID']
  quote_id integer [not null, note: 'FK: 소속 견적서']
  item_order integer [not null, note: '항목 표시 순서 (1부터 시작)']
  name varchar [not null, note: '품목명']
  quantity integer [not null, note: '수량']
  unit_price decimal(12,2) [not null, note: '단가']
  amount decimal(12,2) [not null, note: '금액 = quantity * unit_price (서버 계산 저장)']

  indexes {
    (quote_id, item_order) [unique, note: '같은 견적서 내 항목 순서 중복 방지']
  }
}

// ==========================================
// 인보이스 (승인된 견적서 기반 발행)
// ==========================================

Table invoices {
  id integer [primary key, increment, note: 'PK: 인보이스 고유 ID']
  quote_id integer [not null, note: 'FK: 기반이 된 견적서 (APPROVED 상태만 발행 가능)']
  freelancer_id integer [not null, note: 'FK: 발행한 프리랜서']
  client_id integer [not null, note: 'FK: 청구 대상 클라이언트']
  invoice_number varchar [not null, unique, note: '인보이스 번호 (예: INV-2026-0001), 서버에서 자동 채번']
  total_amount decimal(12,2) [not null, note: '청구 금액 - 발행 시점의 quotes.total_amount를 복사']
  due_date date [not null, note: '지급 기한']
  status InvoiceStatus [not null, default: 'UNPAID', note: '결제 상태']
  paid_at timestamp [note: '입금 확인(결제완료) 처리 시각']
  issued_at timestamp [not null, default: `now()`, note: '발행 시각']

  indexes {
    (quote_id) [unique, note: '하나의 견적서당 인보이스는 1건만 발행 가능']
  }
}

// ==========================================
// Relationships (테이블 간 관계 정의)
// ==========================================

Ref: clients.freelancer_id > users.id
Ref: clients.client_user_id > users.id

Ref: quotes.freelancer_id > users.id
Ref: quotes.client_id > clients.id

Ref: quote_items.quote_id > quotes.id

Ref: invoices.quote_id > quotes.id
Ref: invoices.freelancer_id > users.id
Ref: invoices.client_id > clients.id
